# respmethods

./: .gitignore  CircClust.m  CircPerm.m  Data_Prep.m  Example_CircPerm.m  README.md  how_to_respmethods.md
.github/workflows/: ci.yml
_exampledata/: binhr.mat  events.mat  phasebinvect.mat  raw_resp_004.mat
_functions/: CircClust.m  CircPerm.m  PLV.m  generate_surrogate_iaaft.m  protophase_interp.m  two_point_interp.m
matlab/: Tutorial_DataClust.m  Tutorial_DataPrep.m  Tutorial_MI.m
matlab/_exampledata/: binhr.mat  resp_raw_001.mat  surrbinhr.mat
matlab/_figures/: plots_fig2.m  plots_fig3.m  plots_fig3_rainclouds.R  supp_surrgenmethods.m
matlab/_figures/_data4plotting/: allplv.csv  binhrs_phw10.mat  binhrs_phw5.mat  empmis.mat  freqvec.mat  pbs_phw10.mat  pbs_phw5.mat  surrts.mat  zresp_001.mat  zresp_002.mat  zresp_003.mat
matlab/respLABmethods/: CircClust.m  CircPerm.m  four_point_interp.m  protophase_interp.m  trapez_interp.m  two_point_interp.m
python/: GenerateSurrogates.py  Tutorial_DataClust.py  Tutorial_Preprocessing.ipynb  WIKI.md  data-clust.py  data-prep.py  pyproject.toml  respymethods_tutorial.ipynb  sketchpad.py
python/Tutorial_Simulation/: par-space-1M.toml  test-deps.py
python/advanced_tutorials/Tutorial_Simulation/: exec-job.py  hq-rerun.py  palma-16.toml  sim-cfg.toml  sim-debug.py  workers.sh
python/exampledata/: events.mat
python/legacy/: Tutorial_DataPrepMultiprocessing.py
python/legacy/Tutorial_Simulation/: hq-sim.py  plot-results.py  server.sh
python/respymethods/: GenerateSurrogates.py  Helpers.py  pyproject.toml  setup.py
python/respymethods/src/: phase-extraction.c
python/src/respymethods/: Helpers.py  RespStats.py  SIM_class.py  Simulation.py  exec-job.py  hq-sim.py  palma-217.toml  palma-248.toml  palma-93.toml  plot-results.py  server.sh  setup.py  sim-cfg.toml  sim-sandbox.py  submit.sh  workers.sh
python/src/respymethods.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/respymethods/clib/: phase-extraction.c  util_resp.c
python/tests/: sim_pars.toml  unit_test.py
