[build-system]
requires = ["uv_build >= 0.9.17 , < 0.10.0"]
build-backend = "uv_build"

[project]
name = "respy"
version = "0.1.0"
description = "Robust pipeline for respiration phase-locked analyses of neural or behavioral data including a cluster permutation test for circular data. "
requires-python = ">= 3.13"
readme = "WIKI.md"
dependencies = [
	"numpy",
	"scipy",
	"pyfftw",
	"matplotlib",
]
authors = [
	{name = "Elio Balestrieri", email = "ebalestr@uni-muenster.de"},
	{name = "Teresa Berther", email = "teresa.berther@uni-muenster.de"},
]

[tool.setuptools]
ext-modules = [
	{name = "respymethods.PhaseExtraction", sources = ['src/respymethods/clib/phase-extraction.c'], include-dirs = ["src/respymethods/clib/"], py-limited-api = true}
]
